--- a/app/src/main/res/layout/fragment_my_hours.xml
+++ b/app/src/main/res/layout/fragment_my_hours.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.sunny.sunny.workingtime.MyHoursFragment"
-    android:background="@color/backgroundColor">
+    android:background="@color/backgroundColor"
+    android:id="@+id/myHoursFrag">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/hoursList"
