--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0174d2</color>
+    <color name="colorPrimary">#2F6699</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="backgroundColor">#00c2bc</color>
     <color name="boxBackground">#ffffff</color>
+    <color name="buttonCancel">#ff0000</color>
+    <color name="buttonFinish">#00f525</color>
 </resources>
